@@ -1,3 +1,8 @@
+2021-03-10  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ganymede/server/renderer/SparkDatasetRenderer.java:
+	Initial writing.
+
 2021-03-07  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/ganymede/shell/magic/HTML.java: Initial writing.
